test/files/ill-typed/9.lam
let f = if iszero (5) then (λx:Nat. x) else (λx:Bool. x + 1) in f 5